--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,14 @@ services:
     build: .
     container_name: dify_wp_sync_app
     environment:
-      # WordPress.com OAuth
-      WPCOM_CLIENT_ID: "your_wpcom_client_id"
-      WPCOM_CLIENT_SECRET: "your_wpcom_client_secret"
-      WPCOM_REDIRECT_URI: "https://your-domain.com/oauth/callback"
-      
-      # Dify
-      DIFY_API_KEY: "your_dify_api_key"
-      DIFY_BASE_URL: "https://api.dify.ai/v1"
 
-      # Redis
-      REDIS_ADDR: "redis:6379"
+      WPCOM_CLIENT_ID: ${WPCOM_CLIENT_ID}
+      WPCOM_CLIENT_SECRET: ${WPCOM_CLIENT_SECRET}
+      WPCOM_REDIRECT_URI: ${WPCOM_REDIRECT_URI}
+      DIFY_BASE_URL: ${DIFY_BASE_URL:-https://api.dify.ai/v1}
+      DIFY_API_KEY: ${DIFY_API_KEY}
+      REDIS_ADDR: ${REDIS_ADDR:-redis:6379}
+
       REDIS_DB: 0
       REDIS_PASSWORD: ""
 
