--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 WPCOM_CLIENT_ID=your_wpcom_client_id
 WPCOM_CLIENT_SECRET=your_wpcom_client_secret
-WPCOM_REDIRECT_URI=/oauth/callback
+WPCOM_REDIRECT_URI=http://boc.local:8080/oauth/callback
 DIFY_API_KEY=your_dify_api_key
-REDIS_ADDR=redis:6379
 DIFY_BASE_URL=https://api.dify.ai/v1
+REDIS_ADDR=redis:6379
+REDIS_DB=0
+REDIS_PASSWORD=
+PORT=8080
