--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
       - .env
     ports:
       - "8080:8080"
+    volumes:
+      - .:/app
     depends_on:
       - redis
+    command: ["air"]
     restart: unless-stopped
 
 volumes:
