--- a/.air.toml
+++ b/.air.toml
@@ -2,12 +2,13 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-cmd = "go build -o ./tmp/main ./cmd/server"
-bin = "./tmp/main"
-full_bin = "./tmp/main"
+# Build both server and cli, then copy cli to /usr/local/bin/
+cmd = "go build -o ./tmp/server ./cmd/server && go build -o ./tmp/cli ./cmd/cli && cp ./tmp/cli /usr/local/bin/cli && trap 'rm -f /usr/local/bin/cli' EXIT"
+bin = "./tmp/server"
+full_bin = "./tmp/server"
 include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor"]
-include_dir = []
+include_dir = ["cmd", "internal"]
 exclude_file = []
 delay = 1000
 stop_on_error = true
