--- a/.air.toml
+++ b/.air.toml
@@ -2,8 +2,8 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-# Build both server and cli, then copy cli to /usr/local/bin/
-cmd = "go build -o ./tmp/server ./cmd/server && go build -o ./tmp/cli ./cmd/cli && cp ./tmp/cli /usr/local/bin/cli && trap 'rm -f /usr/local/bin/cli' EXIT"
+# Build both server and cli
+cmd = "go build -o ./tmp/server ./cmd/server && go build -o ./tmp/cli ./cmd/cli"
 bin = "./tmp/server"
 full_bin = "./tmp/server"
 include_ext = ["go", "tpl", "tmpl", "html"]
